최종 저장 전

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -16,6 +16,10 @@
     border-radius: 15px;
 }
 
+.wrapper{position: relative; width: 100%; height: 100vh;}
+
+.border_wrap{border: 1px solid #eee; padding: 10px 15px; margin: 10px 0;}
+
 .example_wrap{border: 1px solid rgb(68, 189, 60, 0.7); margin-top: 25px; position: relative; padding: 15px;}
     .example_wrap h5{position: absolute; top: -10px; left: 10px; font-weight: 400; color: #44bd3c; background: #fff;padding: 0 15px;}
 
@@ -27,11 +31,18 @@
     
     .code_wrap .code_toggle_btn{position: absolute;top: 0;right: 0; padding: 2px 10px; font-size: 11px; color: #222;}
 
+.img_wrap{width: 100%; display: flex !important; align-items: flex-start; justify-content: flex-start;}
+    .img_wrap >*{display: flex; flex:0 1 auto;}
+    .img_wrap img{width: 100%;}
+ 
 .bullet_list li{position: relative; padding: 5px !important; padding-left: 20px !important; margin: 0 !important;}
-.bullet_list li::before{content: '•'; display: inline-block; position: absolute; top: 5px; left: 5px;}
+    .bullet_list li::before{content: '•'; display: inline-block; position: absolute; top: 5px; left: 5px;}
 
-    
-.wrapper{position: relative; width: 100%; height: 100vh;}
+
+
+
+
+
 
 /*************************
  *                       *
@@ -75,7 +86,6 @@
  *   2. #infoAccess            *
  *                             *
  *******************************/
-
 .container{width:100%; min-width:320px; height: calc(100% - 70px); overflow-y: auto; position: absolute; top: 70px; left: 0;}
     .container h2{font-size: 35px; margin: 35px 0; position: relative; padding-left: 10px;}
         .container h2::before{content:''; display: inline-block; width: 5px; height: 80%; position: absolute; top: 10%; left:0; background: linear-gradient( to bottom, #979797, rgb(50, 50, 50) );}
@@ -111,13 +121,11 @@
 
 
 
-
 /**********************
  *                    *
  *     common.html    *
  *                    *
  **********************/
-
 .common h2{font-size: 18px;}
 .common .container{align-items: flex-start; margin: 0 auto;}
     .common .container .inner{position: relative; height: 100%;}
@@ -125,12 +133,20 @@
 
 .contents{width: 70%; height: 100%; position: absolute; top: 0; right: 0; padding-right: 10px; overflow-y: auto;}
     .contents > article{ padding: 25px 0;}
-    
     .contents > article a{color: #3285bf; font-weight: 600; text-decoration: underline;}
     
     .contents .list{padding: 10px 0;}
         .contents .list li{padding: 20px; margin: 15px 0;}
-        .contents .list > li{border: 1px solid #eee;}
+
+        .contents .list > li{border: 1px solid #eee; border-bottom: 3px solid #c4c4c4; }
+
+            /* contents accordion */
+            .contents .list > li h4{cursor: pointer; position: relative;}
+            .contents .list > li h4::after{content: '+'; display: flex; width: 25px; height: 25px; font-size: 35px; position: absolute; top: -4px; right: 0; justify-content: center; align-items: center;}
+            .contents .list > li h4.active::after{content: ''; display: inline-block; width: 17px; height: 3px; background: #000; position: absolute; top: 10px; right: 5px; }
+                .contents .list > li h4 ~ *{display: none;}
+                .contents .list > li h4.active ~ *{display: block;}
+            
         .contents .list > li > p,
         .contents .list > li > ol,
         .contents .list > li > ul,
@@ -143,6 +159,7 @@
             .contents .list > li dl dt{padding: 5px 0; font-weight: 600;}
 
         .contents .child_list li{padding: 5px 0; padding-left: 10px; margin: 15px 0;}
+            .contents .child_list li p{padding-left: 15px;}
 
 
 
