--- a/layout/gnb.html
+++ b/layout/gnb.html
@@ -14,19 +14,15 @@
             </li>
             <li class="gnb-bar"></li>
             <li>
-                <a href="./pc_guide.html" class="pc-guide">PC GUIDE</a>
+                <a href="./ui_guide.html" class="pc-guide">UI GUIDE</a>
             </li>
             <li class="gnb-bar"></li>
-            <li>
-                <a href="./mobile_guide.html" class="mobile-guide">MOBILE GUIDE</a>
-            </li>
         </ul>
 
         <div class="guide_version_wrap">
          <label for="guide_version" class="display_none">GUIDE VERSION</label>
          <select class="guide_version" id="guide_version">
            <option>Guide 버전1</option>
-           <option>Guide 버전2</option>
          </select>
        </div>
     </div>
